2da mod de prueba

--- a/cmdsPower/index.html
+++ b/cmdsPower/index.html
@@ -53,7 +53,7 @@
 
       <div class="clearfix"></div>
 
-      <footer>Gerardo Sebastian Lopez WEB Master</footer>
+      <footer>WEB Master</footer>
     </div>
   </body>
 </html>
